--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  },
   "scripts": {
     "start": "react-scripts start",
     "test": "echo \"Error: no test specified\" && exit 1"
